# yooni_03

./: .env.development  .env.example  .env.production  .gitignore  AGENTS.md  API_EXAMPLES.md  CELERY_SETUP.md  CI_CD_IMPROVEMENTS.md  CLAUDE.md  COMPREHENSIVE_E2E_WORKFLOW_TEST_REPORT.md  COMPREHENSIVE_FUNCTIONAL_TEST_REPORT.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  DROPSHIPPING_SYSTEM_IMPLEMENTATION.md  Dockerfile  Dockerfile.personal  Dockerfile.prod  EXPANSION_GUIDE.md  FUNCTIONAL_TEST_REPORT.md  MIGRATION_GUIDE.md  MOBILE_APP_GUIDE.md  Makefile  Makefile.personal  NON_DEVELOPER_GUIDE.md  OPERATIONS_DASHBOARD_GUIDE.md  OPERATION_GUIDE.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PRODUCTION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCT_PROCESSING_GUIDE.md  README.md  README_PERSONAL.md  SETUP_GUIDE.md  TEST_REPORT.md  UI_IMPROVEMENT_ACTION_PLAN.md  UI_INSPECTION_DETAILED_REPORT.md  UI_TEST_COMPREHENSIVE_REPORT.md  USER_TEST_GUIDE.md  advanced_workflow_tests.py  (+26 more)
backend/: .coveragerc  .dockerignore  .env  .env.example  .env.production  .env.simple  .env.test  .pre-commit-config.yaml  API_USAGE_EXAMPLES.md  AUTH_ENDPOINTS_GUIDE.md  CODE_QUALITY_REPORT.md  DROPSHIPPING_SYSTEM_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE_SUMMARY.md  MARKETPLACE_API_SUMMARY.md  MONITORING_README.md  MULTI_PLATFORM_API_GUIDE.md  Makefile  PRODUCT_API_EXAMPLES.md  PRODUCT_IMPLEMENTATION_SUMMARY.md  RBAC_IMPLEMENTATION_GUIDE.md  REAL_SERVICE_EXAMPLES.md  REDIS_CLUSTER_SETUP.md  REFACTORING_ACTION_PLAN.md  REFACTORING_GUIDE.md  REFACTORING_PLAN.md  WHOLESALER_API_GUIDE.md  WHOLESALER_API_SUMMARY.md  WHOLESALER_IMPLEMENTATION_SUMMARY.md  alembic.ini  all_wholesalers_collection_result.json  apply_performance_optimizations.py  check_db_structure.py  check_enum_values.py  check_wholesaler_accounts.py  collect_all_wholesalers.py  collect_and_save_final.py  collect_and_save_products.py  collect_products_direct.py  (+106 more)
backend/.github/workflows/: ci-cd.yml  security-scan.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_dropshipping_tables.py  003_add_dropshipping_order_processing.py  003_add_order_automation_tables.py  004_add_sourcing_models.py  005_add_product_processing_tables.py  006_add_benchmark_tables.py  006_add_pipeline_analytics_tables.py  007_add_security_audit_tables.py  add_performance_indexes.py  add_rbac_system.py
backend/app/: main_v2.py
backend/app/core/: async_database_utils.py  cache.py  cache_cluster.py  cache_utils.py  config.py  config_v2.py  constants.py  database.py  database_utils.py  decorators.py  error_handler.py  exceptions.py  external_api_utils.py  graphql_cache.py  lazy_loader.py  logging.py  logging_utils.py  monitoring.py  performance.py  performance_optimizer.py  rbac_security.py  redis_client.py  retry.py  security.py  security_audit.py  startup_optimizer.py  validators.py
backend/app/crud/: base.py  optimized_product.py  platform_account.py  product.py  wholesaler.py
backend/app/middleware/: error_middleware.py  logging.py  logging_middleware.py  monitoring.py  monitoring_middleware.py  rate_limit.py  rbac_middleware.py  security_middleware.py
backend/app/models/: __init__.py  ai.py  ai_log.py  base.py  (+25 more)
backend/config/: nginx.conf  prometheus.yml  redis.conf
backend/scripts/: backup.sh  database_optimization.sql  health_check.sh  init_db.sql  init_market_guidelines.py  restore.sh
backend/tests/: .coveragerc  TEST_SUMMARY.md  conftest.py  conftest.py.bak  conftest_enhanced.py  conftest_v2.py  generate_test_report.py  pytest.ini  requirements-test.txt  run_unit_tests.py  simple_conftest.py  test_api_endpoints.py  test_basic_connection.py  test_complete_system.py  test_config.py  test_runner.py  test_sync_api.py  unit_test_report.md
backend/user_test_environment/: USER_GUIDE.md
(+722 files in other folders)
